Fix spacing between image and text in info section

--- a/style.css
+++ b/style.css
@@ -69,8 +69,10 @@ ul {
 
 
 .section {
+    display: flex;
+    flex-direction: column;
     max-width: 150px;
-
+    gap: 5px;
 }
 
 .cta-section {
